@@ -1,1 +1,1 @@
-used-before-assignment:5:6:5:14::Using variable '__dict__' before assignment:UNDEFINED
+used-before-assignment:5:6:5:14::Using variable '__dict__' before assignment:HIGH
