@@ -1,1 +1,1 @@
-used-before-assignment:16:14:16:29:function:Using variable 'failure_message' before assignment:UNDEFINED
+used-before-assignment:16:14:16:29:function:Using variable 'failure_message' before assignment:CONTROL_FLOW
