@@ -1,1 +1,1 @@
-used-before-assignment:9:11:9:23:function:Using variable 'some_message' before assignment:UNDEFINED
+used-before-assignment:9:11:9:23:function:Using variable 'some_message' before assignment:CONTROL_FLOW
