@@ -1,2 +1,2 @@
 undefined-variable:10:39:10:42:do_nothing:Undefined variable 'ctx':UNDEFINED
-used-before-assignment:11:8:11:15:do_nothing:Using variable 'context' before assignment:UNDEFINED
+used-before-assignment:11:8:11:15:do_nothing:Using variable 'context' before assignment:HIGH
